# cpp-template

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  todo.md
.github/workflows/: ci.yml
cmake/: ClangTools.cmake  CodeCoverage.cmake  Sanitizers.cmake  cpp-templateConfig.cmake.in
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/common/include/: version.h
src/foo/: CMakeLists.txt
src/foo/include/: foo.h
src/foo/src/: foo.cpp
src/foo/tests/: CMakeLists.txt  tests.cpp
